fix: update to fix reset filter list